--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,10 @@ buildscript {
         classpath 'at.bxm.gradleplugins:gradle-svntools-plugin:2.2.1'
         classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.8.1' // Rather than using 1.5.9.2 see OFBIZ-10693
         classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.16'
+        classpath "gradle.plugin.com.google.cloud.tools:jib-gradle-plugin:3.2.1"
     }
 }
+apply plugin: "com.google.cloud.tools.jib"
 apply plugin: 'application'
 apply plugin: 'java'
 apply plugin: 'groovy'
@@ -52,6 +54,9 @@ apply from: 'common.gradle'
 ext.os = System.getProperty('os.name').toLowerCase()
 ext.pluginsDir = "${rootDir}/plugins"
 ext.ofbizMainClass = 'org.apache.ofbiz.base.start.Start'
+
+ext.springBootVersion = '2.6.7'
+ext.springVersion = '5.3.20'
 
 // java settings
 List jvmArguments = ['-Xms128M', '-Xmx1024M', '-Djdk.serialFilter=maxarray=100000;maxdepth=20;maxrefs=500;maxbytes=500000']
@@ -116,6 +121,14 @@ def File svnFooterFile = file("${rootDir}/runtime/SvnInfo.ftl")
 defaultTasks 'build'
 
 allprojects {
+	configurations {
+		all*.exclude group: 'javax.servlet', module:'servlet-api'
+		all*.exclude group: 'ch.qos.logback', module:'logback-classic'
+		all*.exclude group: 'org.apache.logging.log4j', module:'log4j-to-slf4j'
+		all*.exclude group: 'org.apache.tomcat.embed', module: 'tomcat-embed-websocket'
+		all*.exclude group: 'org.apache.tomcat.embed', module: 'tomcat-embed-core'
+		all*.exclude group: 'org.eclipse.birt.runtime.3_7_1', module: 'org.apache.commons.codec'
+	}
     repositories{
         mavenCentral()
         // the switch from jCenter to mavenCentral needs some additional repositories to be configured here
@@ -187,7 +200,8 @@ dependencies {
     compile 'commons-validator:commons-validator:1.6'
     compile 'commons-fileupload:commons-fileupload:1.3.3'
     compile 'de.odysseus.juel:juel-impl:2.2.7'
-    compile 'javax.el:javax.el-api:3.0.1-b06'
+//    compile 'javax.el:javax.el-api:3.0.1-b06'
+	compile 'org.apache.tomcat:tomcat-el-api:9.0.58'
     compile 'javax.servlet:javax.servlet-api:4.0.1'
     compile 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.3'
     compile 'junit:junit-dep:4.11'
@@ -216,7 +230,7 @@ dependencies {
     compile 'org.apache.xmlgraphics:fop:2.3'
     compile 'org.apache.xmlrpc:xmlrpc-client:3.1.3'
     compile 'org.apache.xmlrpc:xmlrpc-server:3.1.3'
-    compile 'org.codehaus.groovy:groovy-all:2.4.13' // Remember to change the version number in javadoc.options block
+    compile 'org.codehaus.groovy:groovy-all:2.5.15' // Remember to change the version number in javadoc.options block
     compile 'org.freemarker:freemarker:2.3.31' // Remember to change the version number in FreeMarkerWorker class when upgrading
     compile 'org.hamcrest:hamcrest-all:1.3'
     compile 'org.owasp.esapi:esapi:2.1.0.1'
@@ -231,6 +245,32 @@ dependencies {
     compile 'org.apache.commons:commons-imaging:1.0-alpha2' // Alpha but OK, "Imaging was working and was used by a number of projects in production even before reaching its initial release as an Apache Commons component."
     compile 'batik:batik-svg-dom:1.6-1'
     compile 'com.google.re2j:re2j:1.6'
+	compile "org.springframework:spring-context:${springVersion}"
+	compile "org.springframework.boot:spring-boot:${springBootVersion}"
+	compile "org.springframework.boot:spring-boot-starter-security:${springBootVersion}"
+	compile "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}"
+	compile "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
+	
+	compileOnly "org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}"
+	compileOnly "javax.servlet:javax.servlet-api:4.0.0"
+	compile "org.springframework:spring-webmvc:${springVersion}"
+	compile "org.springframework:spring-tx:${springVersion}"
+	compile "org.springframework:spring-jcl:${springVersion}"
+	compile "org.springframework:spring-aop:${springVersion}"
+	compile "org.springframework:spring-orm:${springVersion}"
+	compile 'org.springframework.security:spring-security-oauth2-client:5.6.1'
+	compile 'org.springframework.cloud:spring-cloud-gateway-mvc:3.1.0'
+	
+	compile "com.google.guava:guava:26.0-jre"
+	compile "org.springframework.boot:spring-boot-starter-cache:${springBootVersion}"
+	compile "org.springframework.data:spring-data-redis:2.6.1"
+	compile 'io.lettuce:lettuce-core:6.1.6.RELEASE'
+	compile 'org.springframework.session:spring-session-data-redis:2.6.1'
+	compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server:${springBootVersion}"
+    compile 'mysql:mysql-connector-java:8.0.28'
+
+	compile 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+	
 
     // ofbiz unit-test compile libs
     testCompile 'org.mockito:mockito-core:2.23.0'
@@ -244,9 +284,9 @@ dependencies {
     runtime 'org.apache.axis2:axis2-transport-local:1.7.8'
     runtime 'org.apache.derby:derby:10.14.2.0'
     runtime 'org.apache.geronimo.specs:geronimo-jaxrpc_1.1_spec:1.1'
-    runtime 'org.apache.logging.log4j:log4j-1.2-api:2.17.2' // for external jars using the old log4j1.2: routes logging to log4j 2
-    runtime 'org.apache.logging.log4j:log4j-core:2.17.2' // the implementation of the log4j 2 API
-    runtime 'org.apache.logging.log4j:log4j-jul:2.17.2' // for external jars using the java.util.logging: routes logging to log4j 2
+//    runtime 'org.apache.logging.log4j:log4j-1.2-api:2.17.2' // for external jars using the old log4j1.2: routes logging to log4j 2
+//    runtime 'org.apache.logging.log4j:log4j-core:2.17.2' // the implementation of the log4j 2 API
+//    runtime 'org.apache.logging.log4j:log4j-jul:2.17.2' // for external jars using the java.util.logging: routes logging to log4j 2
     runtime 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2' // for external jars using slf4j: routes logging to log4j 2
     runtime 'org.apache.logging.log4j:log4j-jcl:2.17.2' // need to constrain to version to avoid classpath conflict (ReflectionUtil)
     runtime 'org.codeartisans.thirdparties.swing:batik-all:1.8pre-r1084380'
@@ -1203,4 +1243,24 @@ new File("${gradle.getGradleUserHomeDir().getAbsolutePath()}/daemon/${gradle.get
         logger.debug("Cleaning up daemon log file $it")
         it.delete()
     }
+}
+
+jib{
+  to.image = ''
+  extraDirectories {
+    paths {
+
+      path {
+        // copies only .txt files except for 'hidden.txt' at the source root
+        from = './'
+        into = '/app'
+        includes = ['applications/**', 'framework/**','themes/**','plugins/**','runtime/**']
+        excludes = ['*.java']
+      }
+    }
+  }
+  container{
+      workingDirectory = "/app"
+      volumes = ['/runtime/catalina','/runtime/data/derby','/runtime/indexes','/runtime/logs','/runtime/output','/runtime/tmp','/runtime/tempfiles']
+  }
 }
