--- a/framework/common/config/general.properties
+++ b/framework/common/config/general.properties
@@ -19,6 +19,8 @@
 
 # -- unique instance id (20 char max)
 unique.instanceId=ofbiz1
+redis.type=standalone
+
 
 # -- the default currency to use for prices, etc
 currency.uom.id.default=USD
