--- a/framework/webapp/config/url.properties
+++ b/framework/webapp/config/url.properties
@@ -21,11 +21,11 @@
 ####
 
 # If you want to use HTTP then set no.http=N. Else all requests will use HTTPS (also enforced by a HSTS header) except if put in the http.request-map.list  
-no.http=Y
+no.http=N
 http.request-map.list=SOAPService,xmlrpc,viewShipmentLabel
 
 # HTTPS Port (Secure port)
-port.https.enabled=Y
+port.https.enabled=N
 # empty by default see OFBIZ-9206
 port.https=
 force.https.host=
