--- a/build.gradle
+++ b/build.gradle
@@ -253,6 +253,7 @@ dependencies {
 	compile "org.springframework.boot:spring-boot-autoconfigure:${springBootVersion}"
 	compile "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
 	implementation "org.springframework.boot:spring-boot-starter-freemarker:${springBootVersion}"
+	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.2'
 	
 	compileOnly "org.springframework.boot:spring-boot-starter-tomcat:${springBootVersion}"
 	compileOnly "javax.servlet:javax.servlet-api:4.0.0"
@@ -271,7 +272,6 @@ dependencies {
 	compile 'io.lettuce:lettuce-core:6.1.6.RELEASE'
 	compile 'org.springframework.session:spring-session-data-redis:2.6.1'
 	compile "org.springframework.boot:spring-boot-starter-oauth2-resource-server:${springBootVersion}"
-    compile 'mysql:mysql-connector-java:8.0.28'
     compile "org.springframework.boot:spring-boot-starter-log4j2:${springBootVersion}"
 
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
@@ -1251,7 +1251,7 @@ new File("${gradle.getGradleUserHomeDir().getAbsolutePath()}/daemon/${gradle.get
 }
 
 jib{
-  to.image = 'jasonhao123/ofbiz:backend18.12.1'
+  to.image = 'jasonhao123/ofbiz:0.2'
   extraDirectories {
     paths {
 
