--- a/themes/common-theme/webapp/images/WEB-INF/web.xml
+++ b/themes/common-theme/webapp/images/WEB-INF/web.xml
@@ -21,7 +21,28 @@ under the License.
 <web-app version="4.0" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
   <display-name>Apache OFBiz - demostore images</display-name>
   <description>Demo Store Images for the Apache OFBiz Project</description>
+  <filter>
+   <filter-name>ExpiresFilter</filter-name>
+   <filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
+   <init-param>
+      <param-name>ExpiresByType image</param-name>
+      <param-value>access plus 10 minutes</param-value>
+   </init-param>
+   <init-param>
+      <param-name>ExpiresByType text/css</param-name>
+      <param-value>access plus 10 minutes</param-value>
+   </init-param>
+   <init-param>
+      <param-name>ExpiresByType application/javascript</param-name>
+      <param-value>access plus 10 minutes</param-value>
+   </init-param>
+  </filter>
 
+  <filter-mapping>
+   <filter-name>ExpiresFilter</filter-name>
+   <url-pattern>/*</url-pattern>
+   <dispatcher>REQUEST</dispatcher>
+  </filter-mapping>
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>main.jsp</welcome-file>
